samples/_failures_safe/1761293007_aedb54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da841d77.c: In function ‘main’:
./samples/SAFE/__tmp_da841d77.c:158:5: error: expected expression at end of input
  158 |     dijkstra(&graph, start_node,
      |     ^~~~~~~~
./samples/SAFE/__tmp_da841d77.c:158:5: error: expected declaration or statement at end of input
